@@ -776,7 +776,9 @@ Release 0.21.0 - Unreleased
    HBASE-2835  Update hadoop jar to head of branch-0.20-append to catch three
                added patches
    HBASE-2840  Remove the final remnants of the old Get code - the query matchers 
-   	       and other helper classes
+               and other helper classes
+   HBASE-2845  Small edit of shell main help page cutting down some on white
+               space and text
 
   NEW FEATURES
    HBASE-1961  HBase EC2 scripts
